# ratchet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SKILL.md  action-quasar.yml  action.yml
.github/workflows/: ci.yml
crates/ratchet-anchor/: Cargo.toml
crates/ratchet-anchor/src/: decode.rs  fetch.rs  idl.rs  lib.rs  load.rs  normalize.rs  pda.rs
crates/ratchet-cli/: Cargo.toml
crates/ratchet-cli/src/: main.rs
crates/ratchet-cli/tests/: e2e.rs
crates/ratchet-cli/tests/fixtures/: vault_v1.json  vault_v2_additive.json  vault_v2_breaking.json
crates/ratchet-core/: Cargo.toml
crates/ratchet-core/src/: diagnostics.rs  engine.rs  lib.rs  preflight.rs  rule.rs  surface.rs
crates/ratchet-core/src/rules/: mod.rs  r001_account_field_reorder.rs  r002_account_field_retype.rs  r003_account_field_removed.rs  r004_account_field_insert_middle.rs  r005_account_field_append.rs  r006_account_discriminator_change.rs  r007_instruction_removed.rs  r008_instruction_arg_change.rs  r009_instruction_account_list_change.rs  r010_instruction_signer_writable_flip.rs  r011_enum_variant_removed_or_inserted.rs  r012_enum_variant_append.rs  r013_pda_seed_change.rs  r014_instruction_discriminator_change.rs  r015_account_removed.rs  r016_event_discriminator_change.rs
crates/ratchet-core/src/rules/preflight/: mod.rs  p001_account_missing_version_field.rs  p002_account_missing_reserved_padding.rs  p003_account_missing_discriminator_pin.rs  p004_event_missing_discriminator_pin.rs  p005_account_name_collision.rs  p006_instruction_missing_signer.rs
crates/ratchet-lock/: Cargo.toml
crates/ratchet-lock/src/: lib.rs
crates/ratchet-mcp/: Cargo.toml
crates/ratchet-mcp/src/: lib.rs  protocol.rs  tools.rs
crates/ratchet-observe/: Cargo.toml
crates/ratchet-observe/src/: aggregate.rs  alert.rs  decode.rs  engine.rs  export.rs  export_template.html  fetch.rs  lib.rs  redact.rs  report.rs  store.rs  ui.rs  upgrade.rs
crates/ratchet-quasar/: Cargo.toml
crates/ratchet-quasar/src/: idl.rs  lib.rs  load.rs  normalize.rs
crates/ratchet-quasar/tests/: integration.rs
crates/ratchet-source/: Cargo.toml
crates/ratchet-source/src/: lib.rs  parse.rs  patch.rs  seeds.rs
crates/ratchet-squads/: Cargo.toml
crates/ratchet-squads/src/: decoded.rs  lib.rs  read.rs
crates/ratchet-svm/: Cargo.toml
crates/ratchet-svm/src/: deploy.rs  elf.rs  fetch.rs  lib.rs  report.rs  validate.rs
crates/ratchet-wasm/: Cargo.toml
crates/ratchet-wasm/src/: lib.rs
crates/ratchet-wasm/tests/: wasm.rs
docs/: publishing.md  quasar-integration.md
examples/: github-workflow.yml
examples/quasar/: README.md  escrow.json  escrow.v2.json
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  vercel-build.sh  vercel.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/check/: route.ts
web/app/diff/: page.tsx
web/app/readiness/: page.tsx
web/app/rules/: page.tsx
web/app/skill.md/: route.ts
web/components/: CodeBlock.tsx  Footer.tsx  Header.tsx
web/lib/: ratchet.test.ts  ratchet.ts  rules.ts
