[workspace]
resolver = "2"
members = [
    "crates/ratchet-core",
    "crates/ratchet-anchor",
    "crates/ratchet-lock",
    "crates/ratchet-source",
    "crates/ratchet-svm",
    "crates/ratchet-quasar",
    "crates/ratchet-squads",
    "crates/ratchet-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Saicharan Pogul <pogul1804@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/saicharanpogul/ratchet"
homepage = "https://github.com/saicharanpogul/ratchet"
readme = "README.md"
rust-version = "1.80"
keywords = ["solana", "anchor", "upgrade", "safety", "idl"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
bs58 = "0.5"
flate2 = "1"
base64 = "0.22"
ureq = { version = "2.10", features = ["json"] }
curve25519-dalek = "4"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = "1"
quote = "1"
walkdir = "2"
litesvm = "0.6"
solana-pubkey = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
