[package]
name = "solana-ratchet-anchor"
description = "Anchor IDL adapter for ratchet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratchet-core = { package = "solana-ratchet-core", path = "../ratchet-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
flate2.workspace = true
base64.workspace = true
ureq.workspace = true
bs58.workspace = true
curve25519-dalek.workspace = true
