[package]
name = "solana-ratchet-cli"
description = "CLI for the ratchet upgrade-safety checker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ratchet"
path = "src/main.rs"

[dependencies]
ratchet-core = { package = "solana-ratchet-core", path = "../ratchet-core", version = "0.2.0" }
ratchet-anchor = { package = "solana-ratchet-anchor", path = "../ratchet-anchor", version = "0.2.0" }
ratchet-lock = { package = "solana-ratchet-lock", path = "../ratchet-lock", version = "0.2.0" }
ratchet-source = { package = "solana-ratchet-source", path = "../ratchet-source", version = "0.2.0" }
ratchet-svm = { package = "solana-ratchet-svm", path = "../ratchet-svm", version = "0.2.0" }
ratchet-squads = { package = "solana-ratchet-squads", path = "../ratchet-squads", version = "0.2.0" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
# Forwards to solana-ratchet-svm/litesvm. Enables `ratchet replay --deploy`.
litesvm-deploy = ["ratchet-svm/litesvm"]
