[package]
name = "solana-ratchet-core"
description = "Core IR and rule engine for ratchet, an upgrade-safety checker for Solana programs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
# Used by the P003/P004 preflight rules to compare a declared
# account/event discriminator against the default Anchor encoding
# (`sha256("account:<Name>")[..8]`). Small dep, no transitive bloat.
sha2.workspace = true
