[package]
name = "solana-ratchet-lock"
description = "Lockfile format for ratchet upgrade-safety checks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratchet-core = { package = "solana-ratchet-core", path = "../ratchet-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
