[package]
name = "solana-ratchet-quasar"
description = "Quasar adapter for ratchet: run the rule engine as a compile-time pass inside the Quasar compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratchet-core = { package = "solana-ratchet-core", path = "../ratchet-core", version = "0.2.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
