[package]
name = "solana-ratchet-squads"
description = "Squads V4 proposal decoder for ratchet: summarises what a pending multisig upgrade would do"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratchet-anchor = { package = "solana-ratchet-anchor", path = "../ratchet-anchor", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true
