[package]
name = "ratchet-svm"
description = "Runtime-replay verification for ratchet: samples live program accounts and checks them against the new IDL"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratchet-core = { path = "../ratchet-core", version = "0.0.1" }
ratchet-anchor = { path = "../ratchet-anchor", version = "0.0.1" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
base64.workspace = true
bs58.workspace = true
