[package]
name = "solana-ratchet-svm"
description = "Runtime-replay verification for ratchet: samples live program accounts and checks them against the new IDL"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Enables in-process deploy into LiteSVM for `verify_deploy`. Pulls in
# `litesvm` and `solana-pubkey` — skipped by default to keep the base
# crate's compile time and dependency footprint small.
litesvm = ["dep:litesvm", "dep:solana-pubkey"]

[dependencies]
ratchet-core = { package = "solana-ratchet-core", path = "../ratchet-core", version = "0.1.0" }
ratchet-anchor = { package = "solana-ratchet-anchor", path = "../ratchet-anchor", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
base64.workspace = true
litesvm = { workspace = true, optional = true }
solana-pubkey = { workspace = true, optional = true }
